Use arrow characters (for high contrast mode) that display correctly on IE6.
Also removing some hardcoded widths that were cutting of the arrow characters in high contrast mode (due to the large font size).  My tests show those hardcoded widths are unnecessary, despite the comment that in the CSS files that floats need a hardcoded width.

Fixes #11159.

git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@22188 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/nihilo/layout/TabContainer.css
+++ b/themes/nihilo/layout/TabContainer.css
@@ -466,11 +466,6 @@
 	padding-top: 4px;
 }
 
-.nihilo .dijitTabContainer .tabStripButton {
-	/* float need width set */
-	width: 21px;
-}
-
 .nihilo .dijitTabStripIcon {
 	height: 14px;
 	background: url(../images/spriteRoundedIconsSmall.png) no-repeat left top ;
